--- a/styles/global.css
+++ b/styles/global.css
@@ -52,3 +52,11 @@ body {
   background-color: transparent;
 }
 
+/* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 0s 600000s, color 0s 600000s;
+}
+
+
+
