--- a/styles/global.css
+++ b/styles/global.css
@@ -30,6 +30,18 @@ body {
   overflow-y: overlay;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide_scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide_scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
 ::-webkit-scrollbar {
   width: 14px;
 }
