Marketing: home page redesign, turn on college basketball 2025 season

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,11 @@ body {
   height: 100%;
 }
 
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 #__next {
   height: 100%;
   overflow: hidden;
