--- a/styles/global.css
+++ b/styles/global.css
@@ -69,11 +69,12 @@ a:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-  height: 6px;
+  height: 20px;
   border: 4px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   background-color: rgba(121, 121, 121, 0.25);
   -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+  min-height: 20px;
 }
 
 ::-webkit-scrollbar-button {
